--- a/src/app/offre/offre.component.html
+++ b/src/app/offre/offre.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-<div class="liste">
+<div>
+  <app-formulaire class="form"></app-formulaire>
   <app-liste-offre></app-liste-offre>
-  <app-formulaire></app-formulaire>
 </div>
 
