--- a/src/app/Components/liste-offre/liste-offre.component.html
+++ b/src/app/Components/liste-offre/liste-offre.component.html
@@ -16,7 +16,7 @@
 <tbody>
   <tr *ngFor="let item of result">
 
-    <td>{{item.nom}}</td>
+    <td>{{item.nomForfait}}</td>
     <td>{{item.idForfait}}</td>
     <td>{{item.nbSms}}</td>
     <td>{{item.volumeMega}}</td>
